# memechat

./: README.md  setup.cfg  tox.ini
.github/workflows/: docs.yml
docs/: conf.py  index.rst
src/memechat/: api.py
