[metadata]
name = memechat
version = 0.0.0
license = MIT
description = Connect through memes (only memes).
long_description = file: README.md
author = Ben O'Neill
author_email = ben@oneill.sh

[options]
packages = find:
package_dir =
			=src
include_package_data = True
install_requires = sqlite3
				   flask
				   flask_restful
